--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,9 +12,11 @@
     "moduleDetection": "force",
 
     /* TypeScript Project References */
-    "composite": true, // 
-    "declaration": true, // 
-    "emitDeclarationOnly": true, // 
+    "composite": true,
+    "declaration": true, 
+    "emitDeclarationOnly": false, // ✅ Allow JS output (important for Vercel)
+    "outDir": "./dist", // ✅ Ensure compiled files are stored properly
+    "rootDir": "./src", // ✅ Ensure correct source directory
 
     /* Linting */
     "strict": true,
@@ -22,5 +24,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["src/**/*"] // ✅ Include all necessary TypeScript files
 }
